# evorun

./: .gitignore  docker-compose.yml
backend/: 4.0.0  config.py  crud.py  main.py  models.py  pyproject.toml  schemas.py  security.py  workout_types.py
backend/api/v1/: deps.py
backend/api/v1/endpoints/: login.py  users.py  workouts.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  security.py  workout_types.py
backend/app/api/v1/: deps.py
backend/app/api/v1/endpoints/: login.py  users.py  workouts.py
mobile_app/: evorun_local.db  main.py  pyproject.toml
