[tool.poetry]
name = "mobile-app"
version = "0.1.0"
description = "Mobile App de corrida fitness gamificado EvoRun."
authors = ["ViniciusBranco viniciusbrancos@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.28.3"
httpx = "^0.28.1"
pyyaml = "^6.0.1"
packaging = "^25.0"
rich = "^14.1.0"
qrcode = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"